hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tvarray_or_darray.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function without_targs(~varray_or_darray $a): varray_or_darray {
  return $a; // not an error
}

function with_targs(~varray_or_darray<int> $a): varray_or_darray<int> {
  return $a; // error
}
